Fix overflow

--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -27,7 +27,7 @@ body {
   font-size: var(--s-body-size);
   line-height: var(--s-body-leading);
   color: var(--s-body-color);
-  // overflow-x: clip;
+  overflow-x: clip;
 }
 
 ul, ol {
